--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 01.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 01.md
@@ -125,5 +125,82 @@
 1. JVM参数有许多，有一些的JVM规范中的，有一些是不同JVM发行版提供的正式特性，有一些是发行版提供的预览特性。常用参数的了解，使用，如何观察并分析，最终调节到合适的数值，是需要学习+实践来学会的。往往配合性能测试来进行参数的调整。
 2. 生产运行中，记得要让JVM输出GC日志，指定OOM的DUMP文件路径，如果条件允许，开启JMX也未尝不可。
 3. 生产的JVM故障排查分两种，一种是宕机，一种是运行时。
-   1. 宕机的先看看有没有OOM日志，再看看日志文件最后的输出。如果没有各种监控系统留痕的话，使用各种命令先备份一下当前机器运行的状态，例如netstat、top、iostat等等。如果节点数少，甚至只有一个节点，导致服务不可用的，抓紧时间重启。
+   1. 宕机的先看看有没有OOM日志，再看看日志文件最后的输出,有些还要看看是不是被系统kill掉，使用dmesg来查看。如果没有各种监控系统留痕的话，使用各种命令先备份一下当前机器运行的状态，例如netstat、top、iostat等等。如果节点数少，甚至只有一个节点，导致服务不可用的，抓紧时间重启。
    2. 运行时的话，看GC日志，是不是有FullGC，用jstack看看是不是有线程死锁。有条件的连上JMX看看一些关键的MXBean。运行时的故障种类可能比较多，还是要仔细分析的。一些线上的分析技巧、工具可能都需要了解。例如skywalking等系统查看Error的Trace；Arthas用来看具体一个类的反编译代码，模拟某个方法的请求等等。
+   3. 故障需要改代码或者调参重启的，还是先分析清楚，在本地测试通过，再打个报告后去操作生产。例如重新hashcode,equals来解决内存泄露的，调整元空间最大值的，修改GC回收器的。生产无小事，快、准、稳很重要。
+
+
+
+## 04丨网络编程原理：一个字符的互联网之旅
+
+### 原文摘抄
+
+> 了解网络通信原理，了解互联网应用如何跨越庞大的网络构建起来，对我们开发一个互联网应用系统很有帮助
+>
+> 1. DNS、CDN、HTTP、TCP、LB（负载均衡）等等都是报文会经过的
+>
+> 2. OSI 7层协议合并为5层模型: 物理层、数据链路层、网络层、传输层、应用层（会话层、表示层、应用层）
+>
+>    ![img](01/02.png)
+>
+>    报文：
+>
+>    ![img](01/03.png)
+>
+> 3. TCP三次握手
+>
+>    App 和服务器之间发送三次报文才会建立一个 TCP 连接，报文中的 SYN 表示请求建立连接，ACK 表示确认。App 先发送 SYN=1，Seq=X 的报文，表示请求建立连接，X 是一个随机数；淘宝服务器收到这个报文后，应答 SYN=1，ACK=X+1，Seq=Y 的报文，表示同意建立连接；App 收到这个报文后，检查 ACK 的值为自己发送的 Seq 值 +1，确认建立连接，并发送 ACK=Y+1 的报文给服务器；服务器收到这个报文后检查 ACK 值为自己发送的 Seq 值 +1，确认建立连接。至此，App 和服务器建立起 TCP 连接，就可以进行数据传输了。
+>
+>    ![img](01/04.png)
+
+### 心得体会
+
+1. 网络是互联网的基石，但是又是被层层封装，不会去细细触碰的。它标准，严格，是软硬件合作来完成工作的。
+2. 网络的一次请求，就像一次旅行，有许多不固定因素。需要拨打电话预定（建立连接），需要坐长途汽车（传输），还需要转站（路由），需要过安检（防火墙），兑换外币（加解密），实名认证（签名验证），累的很，还好都有旅行公司做好了一切安排。
+3. 应用层的协议还有许多，类似邮件的收发，都有不同的协议。了解当前应用系统使用的网络协议，对外的网络模型，中间经过的链路，也是排查问题很重要的依据。
+
+### 工作体验
+
+1. 从这章节的报文层层添加协议头，而报文仅几个字节的示意图可以看出，添加的报文头长度基本可知，长度比较稳定，如果我们应用层的报文太小，着实浪费流量，携带的信息太少。所以我们在系统优化时，可以做一些聚合查询的接口，在一次报文中，将相关性比较大的信息一次性返回，减少报文请求的次数。
+2. 报文太小不好，那太大自然也不好，传输的时间过长，会导致用户页面一直在等待响应、传输，一直在“转圈圈“。要考虑用户的网络情况，是5G、4G还是WIFI，有没有可能网络情况不好是3G甚至更不稳定的网络。假设1MB的报文，在限速400KB的网络中，光传输都需要2.5秒了。**综合实践建议，报文的大小控制在200KB以下为佳。**
+   - 有个生产大报文导致故障的经历，使用spring cloud gateway作为微服务请求的网关是背景。故障情况是网关频繁发生FullGC，导致许多RT要求较低的系统表现不正常。原因就是本部门的公共服务中心系统在与其他业务微服务同步用户、机构、权限等信息的接口时，聚合了全量不同信息在一个报文中，报文大小在20M，在定时同步的时候，多个微服务同时请求，导致这样的集中式的网关集群进入了FullGC的状态。这种情况就需要拆分接口，避免网关压力过大。
+   - 报文太大最直接的性能问题除了传输，也遇到过被强制走网关的加解密。数兆大小的报文，经过这层网关，会多用1秒多的情况也会出现。
+3. 网络的传输过程其实对我们应用系统来说，并不透明。除了章节中提到的DNS、CDN等等，生产环境为了安全，还有层层网关，甚至网关会进行加解密、鉴权。不夸张的说，在银行这样的公司，外部互联网进入的请求，网关过个4-5层是很正常的。甚至内部系统间的请求，会分成web区、应用区、主机区等等，中间会有防火墙隔离。微服务之间的调用存在着鉴权。敏感数据会有加解密。种种原因，可能会导致我们内部请求一个接口仅几十毫秒，而用户则300毫秒起步了。
+4. 也遇到过业务应用系统FullGC时间过长，导致没有响应心跳包导致的告警。通过网络平台把当时的网络包下载下来，通过wireshark分析，确定准确时间段，对比系统日志、GC日志，才准确定位原因。
+5. 掌握nslook，tracert，ping，telnet，netstat等网络相关的命令是比较有效的。
+6. 顺便一提，**ssh也是一个很有意思的命令**。当服务器未安装telnet命令，难以去验证防火墙规则设置是否打开时，通过ssh命令，指定端口来发起请求，也是可以判断网络是否通的，因为都是通过TCP协议进行发起请求的。
+
+## 05丨文件系统原理：如何用1分钟遍历一个100TB的文件？
+
+
+### 原文摘抄
+
+### 心得体会
+
+### 工作体验
+
+## 06丨数据库原理：为什么PrepareStatement性能更好更安全？
+
+
+### 原文摘抄
+
+### 心得体会
+
+### 工作体验
+
+## 07丨编程语言原理：面向对象编程是编程的终极形态吗？
+
+
+### 原文摘抄
+
+### 心得体会
+
+### 工作体验
+
+## 答疑丨Java Web程序的运行时环境到底是怎样的？
+
+### 原文摘抄
+
+### 心得体会
+
+### 工作体验
