--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 01.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 01.md
@@ -172,21 +172,76 @@
 
 ## 05丨文件系统原理：如何用1分钟遍历一个100TB的文件？
 
-
 ### 原文摘抄
+
+> 1. 硬盘的形式主要两种，一种是机械式硬盘，一种是固态硬盘。
+>
+> 2. 机械式硬盘的结构，主要包含盘片、主轴、磁头臂，主轴带动盘片高速旋转，当需要读写盘上的数据的时候，磁头臂会移动磁头到盘片所在的磁道上，磁头读取磁道上的数据。读写数据需要移动磁头，这样一个机械的动作，至少需要花费数毫秒的时间，这是机械式硬盘访问延迟的主要原因。
+>
+> 3. 如果一个文件的数据在硬盘上不是连续存储的，比如数据库的 B+ 树文件，那么要读取这个文件，磁头臂就必须来回移动，花费的时间必然很长。如果文件数据是连续存储的，比如日志文件，那么磁头臂就可以较少移动，相比离散存储的同样大小的文件，连续存储的文件的读写速度要快得多。
+>
+> 4. 固态硬盘则没有这种磁性特质的存储介质，也没有电机驱动的机械式结构。其中主控芯片处理端口输入的指令和数据，然后控制闪存颗粒进行数据读写。由于固态硬盘没有了机械式硬盘的电机驱动磁头臂进行机械式物理移动的环节，而是完全的电子操作，因此固态硬盘的访问速度远快于机械式硬盘。
+>
+> 5. inode 中记录着文件权限、所有者、修改时间和文件大小等文件属性信息，以及文件数据块硬盘地址索引。inode 是固定结构的，能够记录的硬盘地址索引数也是固定的，只有 15 个索引。其中前 12 个索引直接记录数据块地址，第 13 个索引记录索引地址，也就是说，索引块指向的硬盘数据块并不直接记录文件数据，而是记录文件数据块的索引表，每个索引表可以记录 256 个索引；第 14 个索引记录二级索引地址，第 15 个索引记录三级索引地址
+>
+> 6. RAID，即独立硬盘冗余阵列，将多块硬盘通过硬件 RAID 卡或者软件 RAID 的方案管理起来，使其共同对外提供服务。根据硬盘组织和使用方式不同，常用 RAID 有五种，分别是 RAID 0、RAID 1、RAID 10、RAID 5 和 RAID 6。
+>
+>    ![img](01/05.png)
+>
+>    **实践中，使用最多的是 RAID 5**，数据被分成 N-1 片并发写入 N-1 块硬盘，这样既可以得到较好的硬盘利用率，也能得到很好的读写速度，同时还能保证较好的数据可用性。使用 RAID 5 的文件系统比简单的文件系统文件容量和读写速度都提高了 N-1 倍，但是一台服务器上能插入的硬盘数量是有限的，**通常是 8 块，也就是文件读写速度和存储容量提高了 7 倍**。（所有数据的bit位，逐位进行异或，得到的就是校验位。 如果丢失部分数据，用校验数据和其余数据逐位进行异或运算，可到丢失部分数据。）
+>
+> 7. HDFS：NameNode 负责整个分布式文件系统的元数据（MetaData）管理，也就是文件路径名、访问权限、数据块的 ID 以及存储位置等信息，相当于 Linux 系统中 inode 的角色。HDFS 为了保证数据的高可用，会将一个数据块复制为多份（缺省情况为 3 份），并将多份相同的数据块存储在不同的服务器上，甚至不同的机架上。这样当有硬盘损坏，或者某个 DataNode 服务器宕机，甚至某个交换机宕机，导致其存储的数据块不能访问的时候，客户端会查找其备份的数据块进行访问。
 
 ### 心得体会
 
+1. 看到上百T我就猜是HDFS，毕竟还没听过哪个单机这么玩的，普通单机操作系统寻址能不能到100TB还需要再计算一下。
+2. 冗余是很必要的一件事，RAID 5通过异或生成的校验位可以还原任意一块磁盘的损坏，这个设计真的是精妙啊！
+3. 引入HDFS之后还要考虑数据倾斜的问题呢。（分布式的大数据都需要考虑）
+
 ### 工作体验
+
+1. 当前没有单一这么大的文件读取过，基本都是大数据框架进行处理了。
+2. 大文件读取记得使用随机读写，不要把整个文件读取到内存中。
 
 ## 06丨数据库原理：为什么PrepareStatement性能更好更安全？
 
-
 ### 原文摘抄
+
+> 1. 应用程序提交 SQL 到数据库执行，首先需要建立与数据库的连接，数据库连接器会为每个连接请求分配一块专用的内存空间用于会话上下文管理
+> 2. 一个 SQL 提交到数据库，经过连接器将 SQL 语句交给语法分析器，生成一个抽象语法树 AST；AST 经过语义分析与优化器，进行语义优化，使计算过程和需要获取的中间数据尽可能少，然后得到数据库执行计划；执行计划提交给具体的执行引擎进行计算，将结果通过连接器再返回给应用程序。
+> 3. 执行引擎是可替换的，只要能够执行这个执行计划就可以了。
+> 4. 一个是 PrepareStatement 会预先提交带占位符的 SQL 到数据库进行预处理，提前生成执行计划，当给定占位符参数，真正执行 SQL 的时候，执行引擎可以直接执行，效率更好一点。
+> 5. 另一个好处则更为重要，PrepareStatement 可以防止 SQL 注入攻击。
+> 6. 数据库索引使用 B+ 树，我们先看下 B+ 树这种数据结构。B+ 树是一种 N 叉排序树，树的每个节点包含 N 个数据，这些数据按顺序排好，两个数据之间是一个指向子节点的指针，而子节点的数据则在这两个数据大小之间。
+> 7. 数据库索引有两种，一种是聚簇索引，聚簇索引的数据库记录和索引存储在一起。MySQL 数据库的主键就是聚簇索引，主键 ID 和所在的记录行存储在一起。
+> 8. 另一种数据库索引是非聚簇索引，非聚簇索引在叶子节点记录的就不是数据行记录，而是聚簇索引，也就是主键。
+> 9. 这种通过非聚簇索引找到主键索引，再通过主键索引找到行记录的过程也被称作**回表**。
+> 10. 数据库实现事务主要就是依靠事务日志文件。
+> 11. 此外，像 MySQL 数据库还有 binlog 日志文件，记录全部的数据更新操作记录，这样只要有了 binlog 就可以完整复现数据库的历史变更
+> 12. 对于一般的应用开发者而言，全面掌握关系数据库的各种实现细节，代价高昂，也没有必要。我们只需要掌握数据库的架构原理与执行过程，数据库文件的存储原理与索引的实现方式，以及数据库事务与数据库复制的基本原理就可以了。
 
 ### 心得体会
 
+1. 数据库就像操作系统一样，是数据结构的集大成者。作为业务开发，很多时候了解SQL的执行过程，才能写出更合适的SQL，更好的利用数据库。
+2. Oracle也有闪回操作，类似Mysql的binlog日志文件，用于浮现数据库的历史变更。
+3. AST的语法树优化的确是每种数据库都不尽相同，靠着不同的关系代数，使得生成的执行计划更加贴近于它本身的存储的数据结构。
+
 ### 工作体验
+
+1. 工作中，也有观察过apache kylin的SqlNode生成过程，了解calcite框架的使用。对自身的无码BI系统建设有较大益处。
+
+2. 不同的数据库因为底层储存不尽相同，索引方式也不相同，使得SQL的编写，也需要根据数据库特性来编写。例如:
+
+   ```sql
+   -- 1
+   select count(a), sum(b), c from table_a where d = 1 group by c;
+   -- 2
+   select a, b, c from table_a where d = 1;
+   ```
+
+   这样的两条SQL，在oracle或mysql等OLTP的数据库中，第1条会明显慢于第2条。毕竟，第一条还要做聚合计算。但是在apache kylin这样的OLAP数据库中，第1条会更加快。其预计算的特性，会将索引的度量都计算完成，存储在cube中，效率会更高。
+
+3. sql的优化，并不是有固定公式的，查询都是要根据不同数据库的存储特征，查询引擎来写适合它的语句。
 
 ## 07丨编程语言原理：面向对象编程是编程的终极形态吗？
 
