--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 03.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 03.md
@@ -39,7 +39,7 @@
 
 ### 心得体会
 
-1. 原则不是教条，单一指责是希望做到高内聚。实际上，本身看起来已经很内聚的代码，可能在遇到新的需求后，也开始变得不够内聚。
+1. 原则不是教条，单一职责是希望做到高内聚。实际上，本身看起来已经很内聚的代码，可能在遇到新的需求后，也开始变得不够内聚。
 2. 评论区看到的也很有意思，一个类抽出来之后，被很多的类引用，后续的修改也是会很有包袱感的，这之间也是需要一个权衡。
 
 ### 工作体验
