--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 04.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 04.md
@@ -23,11 +23,26 @@
 
 1. 出现过有调用者不清楚接口具体含义的情况下调用了错误的接口，后续实践中，可以采用这一原则，分成多个接口，提高代码可读性。
 
+## 16 | 设计模式基础：不会灵活应用设计模式，你就没有掌握面向对象编程
+
 ### 原文摘抄
 
+> 面向对象编程的本质是多态
+>
+> 多态：子类实现父类或者接口的抽象方法，程序使用抽象父类或者接口编程，运行期注入不同的子类，程序就表现出不同的形态，是为多态。
+>
+> 设计模式的精髓是对多态的使用.
+>
+> **模式是可重复的解决方案**，人们在编程实践中发现，有些问题是重复出现的，虽然场景各有不同，但是问题的本质是一样的，而解决这些问题的方法也是可以重复使用的。人们把这些可以重复使用的编程方法称为设计模式。**设计模式的精髓就是对多态的灵活应用**。
+>
+> “精通设计模式，就是忘了设计模式”
 
 ### 心得体会
 
+1. 之前的确没有思考过，不同的设计模式中，都用到了哪些编程的特性。后续用到时，还是要好好体会。
 
 ### 工作体验
+
+1. 正如文章中提到了，面试候选人说到的更多是工厂模式与单例模式。平时手动撸其他设计模式太少了，感觉在框架中应用的多，例如监听spirng上下文启动完毕等。这些扩展点，其实也是一种监听器模式，启动时框架帮你注册了监听器，事件到了调用监听器，只是框架做的工作太多太完善，让我们只需要实现一个接口即可。
+2. 模板方法、监听器模式，适配器模式，享元模式可能是最近用到比较多、比较熟练的模式了。
 
