--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 08.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 08.md
@@ -1,6 +1,6 @@
 # 《后端技术面试 38 讲》学习笔记 Day 08
 
-## 17 | 设计模式应用：编程框架中的设计模式
+## 23 | 异步架构：如何避免互相依赖的系统间耦合？
 
 ### 原文摘抄
 
@@ -9,7 +9,7 @@
 
 ### 工作体验
 
-## 18 | 反应式编程框架设计：如何使程序调用不阻塞等待，立即响应？
+## 24 | 负载均衡架构：如何用10行代码实现一个负载均衡服务？
 
 ### 原文摘抄
 
