--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 08.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 08.md
@@ -4,10 +4,27 @@
 
 ### 原文摘抄
 
+> 要手段就是使用消息队列的异步架构，有时候也被称为事件驱动架构。
+>
+> 消息队列异步架构的主要角色包括消息生产者、消息队列和消息消费者。
+>
+> 根据消息消费方式又分为点对点模式和发布订阅模式两种。
+>
+> 在**点对点模式**中，多个消息生产者向消息队列发送消息，多个消息消费者消费消息，每个消息只会被一个消息消费者消费。
+>
+> 在发布订阅模式中，开发者可以在消息队列中设置主题，消息生产者的消息按照主题进行发送，多个消息消费者可以订阅同一个主题，每个消费者都可以收到这个主题的消息拷贝，然后按照自己的业务逻辑分别进行处理计算。
+>
+> 好处：改善写操作请求的响应时间、更容易进行伸缩、削峰填谷、隔离失败、降低耦合
+
 ### 心得体会
 
+1. 异步发送后，生产者直接返回了，提高效率。
+2. 对于失败重试的情况，似乎是消费者更需要关心的一件事，对于生产者默认就是发送成功，一定能被成功消费，只是时间问题，当然遇到极端情况，多次重试还是失败的。不知道这样的理解对吗？
 
 ### 工作体验
+
+1. 工作中早年接触过IBM MQ、RocketMQ、ActiveMQ，作为一个初级开发者来看的确没有什么大差别，唯一就是IBM MQ部署，创建队列都很麻烦，甚至不能代码创建。
+2. MQ是有多种协议的，也会影响性能。kafka这样的，作为日志发送的场景似乎都是很好的选型，至少多家都是这样的。
 
 ## 24 | 负载均衡架构：如何用10行代码实现一个负载均衡服务？
 
