--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 07.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 07.md
@@ -30,7 +30,23 @@
 
 ### 原文摘抄
 
+> 一般说来，缓存可以分成两种，通读缓存和旁路缓存。
+>
+> **通读**（read-through）缓存，应用程序访问通读缓存获取数据的时候，如果通读缓存有应用程序需要的数据，那么就返回这个数据；如果没有，那么通读缓存就自己负责访问数据源，从数据源获取数据返回给应用程序，并将这个数据缓存在自己的缓存中。
+>
+> **旁路**（cache-aside）缓存，应用程序访问旁路缓存获取数据的时候，如果旁路缓存中有应用程序需要的数据，那么就返回这个数据；如果没有，就返回空（null）。应用程序需要自己从数据源读取数据，然后将这个数据写入到旁路缓存中。
+>
+> 但是缓存也不是万能的，如果不恰当地使用缓存，也可能会带来问题。首先就是数据脏读的问题，缓存的数据来自数据源，如果数据源中的数据被修改了，那么缓存中的数据就变成脏数据了。
+>
+> 主要解决办法有两个，一个是过期失效，另一个办法就是失效通知
+>
+> 如果缓存的数据没有热点，写入缓存的数据很难被重复读取，那么使用缓存就不是很有必要了。
+
 ### 心得体会
 
+1. 通读，就是缓存中间件来读取实际数据，往往都是静态的。
+2. 旁路，应用控制读取实际数据。
 
 ### 工作体验
+
+1. 工作中主要是使用redis，或者本地缓存。全都是旁路缓存。并且遵循旁路设计，即使缓存异常、宕机，也不影响请求实际数据。
