--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 09.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 09.md
@@ -35,7 +35,19 @@
 
 ### 原文摘抄
 
+> 把这个单词、文档矩阵按照单词→文档列表的方式组织起来，就是倒排索引了
+>
+> Google 使用了一种叫 PageRank 的算法，计算每个网页的权重，搜索结果就按照权重排序，权重高的网页在最终结果显示的时候排在前面。
+
+> 要相对这些站内搜索引擎的结果进行排序，就需要利用其它一些信息以及算法，比如可以利用文章获得的点赞数进行排序，点赞越多，表示越获得其它用户的认可，越应该在搜索结果中排在前面。
+>
+> 而这些推荐信息来自于广大参与其中的人，因此这些算法实现也被称作“集体智慧编程”。
+
 ### 心得体会
 
+1. pageRank、集体智慧、TF(词频)等方式进行排序，也是需要根据场景来选择的。
+2. 倒排索引，文章再长再多，词的数量也是有限的，不庞大的，倒排索引就高效。
 
 ### 工作体验
+
+1. 细细想来，公共服务中心对条线采取1,2,4,8,...，512。最终查找多个条线时通过位运算进行过滤。条线的码值就是倒排索引，多条线的查询就是并集，但是它比简单的并集更快，因为可以先通过位运算生成精确条件。
