--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 11.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 11.md
@@ -1,6 +1,6 @@
 # 《后端技术面试 38 讲》学习笔记 Day 11
 
-## 17 | 设计模式应用：编程框架中的设计模式
+## 29 | 高可用架构：我们为什么感觉不到淘宝应用升级时的停机？
 
 ### 原文摘抄
 
@@ -9,7 +9,7 @@
 
 ### 工作体验
 
-## 18 | 反应式编程框架设计：如何使程序调用不阻塞等待，立即响应？
+## 30 | 安全性架构：为什么说用户密码泄漏是程序员的锅？
 
 ### 原文摘抄
 
