--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 10.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 10.md
@@ -4,10 +4,23 @@
 
 ### 原文摘抄
 
+> Dubbo 应该说是借鉴了此前更早的 SOA 架构方案，即面向服务的体系架构。
+>
+> Dubbo 在借鉴 SOA 架构的基础上进行了优化，抛弃了 SOA 一些不必要的规范约束，使用二进制协议进行服务注册与调用，执行效率和使用的简洁性都得到了极大提升。
+>
+> Dubbo 架构和 SOA 架构一样，最核心的组件也是 3 个，分别是**服务提供者**、**服务消费者**和**服务注册中心**。
+>
+> 阿里微服务**重构成功的另外一个重要因素**是，**即使在单体时代，war 包内的模块关系也还是比较清晰的**。所以在重构微服务的时候，只需要对这些模块进行较小的改动，进行微服务部署就可以了。
+>
+> 微服务本身和业务强相关，如果业务关系没梳理好，模块设计不清晰，使用微服务架构很可能得不偿失，带来各种挫折。
+
 ### 心得体会
 
+1. 小孩是耍不好大刀的，微服务这把牛刀在庖丁手里才是神器。清晰的了解牛的身体构造，就像工程师对工程业务的理解，只有烂熟于心，下刀才不会砍在骨头上。
 
 ### 工作体验
+
+1. 在单体工程中，子工程（模块）的划分，一个工程里包的划分。紧贴业务调理，不混论，后续拆分微服务才会顺理成章。另外，有术上的技巧，就是通过接口编程，抽象的隔离，不要进行实现上的依赖，对工程脉络也很有帮助。
 
 ## 28 | 高性能架构：除了代码，你还可以在哪些地方优化性能？
 
