--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 10.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 10.md
@@ -26,7 +26,43 @@
 
 ### 原文摘抄
 
+> 系统性能指标主要有响应时间、并发数、吞吐量和**性能计数器**。
+>
+> 性能计数器，指的是服务器或者操作系统性能的一些指标数据，包括系统负载 System Load、对象和线程数、内存使用、CPU 使用、磁盘和网络 I/O 使用等指标，**这些指标是系统监控的重要参数，反映系统负载和处理能力的一些关键指标，通常这些指标和性能是强相关的**。这些指标很高，成为瓶颈，通常也预示着性能可能会出现问题。
+>
+> 具体说来，整个测试过程又可细分为性能测试、负载测试、压力测试三个阶段。
+
+> 数据中心优化:大型的互联网应用基本都采用多数据中心方案，在全球各个主要区域都部署自己的数据中心，就近为区域用户提供服务，加快响应速度。
+>
+> 硬件优化
+>
+> 操作系统优化:经过分析发现，在某些版本的 Linux 中，transparent huge page 这个参数是默认打开的，导致系统占用 CPU 过高。
+>
+> 虚拟机优化
+>
+> 基础组件优化
+>
+> 架构优化:缓存、消息队列、集群
+>
+> 代码优化
+
 ### 心得体会
 
+1. 这是从架构师角度去看的架构优化，也是公司级的架构师。从数据中心一直到代码层次。
+2. 性能优化真的知识面又广又深，工作四五年的我也只能是在某些方向略知皮毛。
 
 ### 工作体验
+
+1. 先说说听说的，在一个数据中心，服务器是不是在一个机架、传输的是不是万兆网卡都很影响大数据这样的集群跑批的性能。
+
+2. jvm的参数调整可能是最贴近java工程师的，主要在于调整JVM内存的大小，以及GC算法的调整。工作目前来看，给不要太少的JVM，GC调整为G1垃圾回收器，正常压数个小时的压力测试，也不会出现FGC，已经很不错了。
+
+3. 然后是各种组件的调参，需要对我们用到的组件、中间件有足够的了解。例如tomcat连接数、线程数；redis的连接数、超时时间、空闲连接数等；feign的连接数，超时时间等配置都会影响性能。
+
+4. 然后是操作系统的调参，目前生产用的基本上都是redhat，也在其他公司看过centos，像ubuntu还未在生产上遇到过。操作系统的参数很多，没有听过那个参数我们可能根本没有去查看、调整他的思路。例如哪个参数限制socket连接数量，又哪个参数设置tcp自动断开的时间等等，都是需要学习+经验+遭遇才会慢慢习得的。不能急于求成，慢慢来吧。
+
+5. 另外，想起来以前其他吸引人的标题文章，例如“榨干服务器的每一分性能”，其实这个是一个比较可笑的做法。**我们往往在机器的各种资源到达80%就进行轻微的告警**，通知系统负责人，而一旦到90%，并保持一段时间，就生成一个严重的告警了。
+
+   服务器长期处于一个高压情况是一个危险的做法，进程存在被操作系统kill掉的风险，或者操作系统本身宕机。
+
+   这个指标指导我们在压测时，性能调优时，比较优秀的做法是将性能约束在75%-80%，可以偶尔超过85%（高峰刚过来的时候）。
