--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 13.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 13.md
@@ -4,16 +4,36 @@
 
 ### 原文摘抄
 
+> 比特币的主要思路是，构建一个无中心、去信任的分布式记账系统。
+>
+> 交易签名只能保证交易不是他人伪造的，却不能阻止交易的发起者自己进行多重交易，即交易的发起者将一个比特币同时转账给两个人，也就是所谓的双花。
+>
+> **如何保证区块的严格顺序，比特币的做法是，在每个区块的头部记录他的前一个区块，也就是前驱区块的 hash 值，这样所有的区块就构成了一个链。**
+>
+> 比特币应用的区块链场景也叫做公链，因为这个区块链对所有人都是公开的。除此之外，还有一种区块链应用场景，被称作联盟链。
+>
+> 区块链的出现，使得低成本，去信任的跨组织合作成为可能，将重构组织间的关系，这个关系既包括企业间的关系，也包括政府和企业间的关系，还有政府部门间的关系。
+
 ### 心得体会
 
+1. “不会膨胀的数字货币”实在损害了某A国的利益了，也是比特币难以得到主流国家认可的原因吧。
+2. 但是这种“去信任”，或者说“零信任”的技术，标准倒是很有意思。
 
 ### 工作体验
+
+1. 0工作体验咯，可能数字人民币有这样的技术在，改天请教一下范芳军专家。
 
 ## 答疑丨互联网需要解决的技术问题是什么？
 
 ### 原文摘抄
 
+> 实践中，我们需要使用虚拟节点对算法进行改进。也就是说当把一个服务器节点放入到一致性 Hash 环上的时候，并不是把真实的服务器的 Hash 值放到环上，而是将一个服务器节点虚拟成若干个虚拟节点，把这些虚拟节点的 Hash 值放到环上去。在实践中通常是把一个服务器节点虚拟成 200 个虚拟节点，然后把 200 个虚拟节点放到环上。Key 依然是顺时针的查找距离它最近的虚拟节点，找到虚拟节点以后，根据映射关系找到真正的物理节点。
+>
+> 互联网应用系统除了高并发还要面对什么：高可用、安全性、大数据、业务快速迭代。
+
 ### 心得体会
 
-
 ### 工作体验
+
+1. 工作中，面对高并发带来的问题还不算多，对于一个日活用户在8K级的应用后台之一，每日的QPS大约不到30，对两台8C16G的机器还是绰绰有余的。
+2. 而数据量太大带来的问题确实是有的，大数据的查询，处理，较高的RT值无法忽略，在kylingence、redis、es等方式进行加速处理后，仍然难以解决近明细级的跨切片聚合查询速度，尤其是单日切片数据量达到几千万，上亿这个级别。
