--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 14.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 14.md
@@ -4,14 +4,42 @@
 
 ### 原文摘抄
 
+> 最近几年的时间他承担的**工作职责几乎没有变化**，使用的技术、开发的项目几乎和头几年一样，那么很难相信这些年他的技术会有什么进步。
+>
+> 任何专业技能的从业者都需要经历新手、高级新手、胜任者、精通者、专家 5 个阶段。
+>
+> 一个悲观的事实是，新手会自然进入高级新手阶段，**而高级新手却无法自然进入其后的其他等级阶段。**实际上，在各个专业领域中，超过半数的人终其一生都停留在高级新手阶段.
+>
+> 而一旦行业出现技术变革或者工作出现新情况，高级新手就会遇到巨大的工作困难。
+>
+> 少部分新手和高级新手会在工作中学习、领悟规则背后的原理，当需要解决的问题变化，或者行业出现技术革新时，能够尝试学习新技术，解决新问题，这样的人就进入胜任者阶段。胜任者工作的一个显著特点是，做事具有主动性。
+>
+> 而拥有反思精神和全局思维，即使没有新问题也能够进行自我突破、寻求新的出路的人，就进入了精通者阶段。精通者需要通过主动学习进行提升，主动进行大量的阅读和培训，而不是仅仅依靠工作中的经验和实践。他们在完成一个工作后会反思：哪些地方可以改进，下次怎么做会更好？
+>
+> 高级新手会把规则当做普适性的真理而使用，甚至引以为豪；而精通者则会明白所有的规则都只在特定的场景中才会有效，工作中最重要的不是规则，而是对场景的理解。
+>
+> 而最终，各行各业大约只有 1% 的人会进入专家阶段，专家把过往的经验都融汇贯通，然后形成一种直觉，他们直觉地知道事情应该怎么做，然后用**最直接、最简单的方法把问题解决**。
+
+> 如何在工作中成长:1. 勇于承担责任;2. 在实践中保持技能;3. 关注问题场景
+>
+> 有个说法叫做 1 万小时定律，是说要想成为某个领域的专家，必须经过 1 万小时高强度的训练才可以
+>
+> 这个世界没有万能的方法，没有一劳永逸的银弹。每一种方法都有适用的场景，每一种技术都有优点和缺点，你必须要理解问题的关键细节、上下文场景，才能够选择出最合适的技术方案，真正地解决问题。
+
 ### 心得体会
 
+1. 高级新手到胜任者是一个分界线。
+2. 主动学习、更深入的理解背后的原理、基于场景的深入分析，是成长的重要方法
 
 ### 工作体验
+
+1. 在这一周之前，我可能会觉得自己在胜任者阶段了，并且开始朝着精通者进发。事实上，我觉得我错的离谱。原本负责的BI平台，我的确已经十分的熟悉，并且了解一些业务，能够提出更多的业务、技术上的需求并主导改进的进行。但是上周开始调研ETL平台，byzer这个应用，基于hadoop与spark，并将任务提交到yarn集群执行。我突然就发现，我原先对大数据这块的体系原来这么陌生，从部署到执行，我都不能看出来其基本的流程，可能面对的问题。更加可怕的是，我甚至还不知道怎么去真正的入门，看看书也都是理论型的，没办法紧贴业务的实践。今后还是谦虚一些，空杯心态，多多反思自己。
 
 ## 35 | 技术进阶之道：你和这个星球最顶级的程序员差几个等级？
 
 ### 原文摘抄
+
+> 团队影响者。他们是项目架构师、技术经理、技术骨干，他们撑起了项目的技术核心，在项目范围内决定着各种技术方向，核心的代码由他们开发，出了重要的问题也要找他们去解决。这样的人，在一个 10 人团队中，大约有一两人。
 
 ### 心得体会
 
