--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 14.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 14.md
@@ -6,7 +6,7 @@
 
 > 最近几年的时间他承担的**工作职责几乎没有变化**，使用的技术、开发的项目几乎和头几年一样，那么很难相信这些年他的技术会有什么进步。
 >
-> 任何专业技能的从业者都需要经历新手、高级新手、胜任者、精通者、专家 5 个阶段。
+> 任何专业技能的从业者都需要经历**新手、高级新手、胜任者、精通者、专家** 5 个阶段。
 >
 > 一个悲观的事实是，新手会自然进入高级新手阶段，**而高级新手却无法自然进入其后的其他等级阶段。**实际上，在各个专业领域中，超过半数的人终其一生都停留在高级新手阶段.
 >
@@ -40,8 +40,33 @@
 ### 原文摘抄
 
 > 团队影响者。他们是项目架构师、技术经理、技术骨干，他们撑起了项目的技术核心，在项目范围内决定着各种技术方向，核心的代码由他们开发，出了重要的问题也要找他们去解决。这样的人，在一个 10 人团队中，大约有一两人。
+>
+> 团队影响者之上，是公司影响者，大约占总数的 3.2%，他们决定整个公司的技术方向，用 Java 还是用 PHP？用 MySQL 还是 SQLServer？微服务用 Dubbo 还是 Spring Cloud？常他们会关注国内最新的技术风向，参加各种技术峰会，阅读各种技术图书，通过这些信息获取知识并做出自己的技术判断和决策。而向他们传播这些最新技术动向的人，是全国影响者。这些人通常来自知名的 IT 互联网公司.
+>
+> 在这个**技术影响力体系里面，越往高，背景越重要**。你是谁不重要，你代表谁更重要，人们关注的不是你叫什么名字，而是你来自哪个公司
+>
+> 而在这个金字塔的最顶层，则是那些开创了一个行业的行业开创者，Hadoop 成就了大数据行业，Linux 引领了操作系统行业
+>
+> **你在一个已经非常成熟的技术上耕耘，再努力也很难获得足够的关注；**而在那些尚不成熟的技术上努力，你又如何知道将来这个技术会成功？这就需要有足够的技术敏感性，进行足够多的技术尝试，做出有战略眼光的技术决策。
+>
+> 比捷径更捷径的路不是没有，只是更加艰难，不只需要你个人的努力，还要看历史的进程。
+
+> 关于如何构建自己的技术影响力，有两点建议：
+>
+> 承担责任：重大的技术决策可能会带来重大的技术风险，要有勇气承担风险，并因此赢得他人的尊重。
+>
+> 帮助他人：团队成员遇到技术问题的时候，即使不是自己的工作范围，也可以帮助他们去解决问题，一方面建立自己的技术影响力，另一方面，通过解决问题获得更快的技术成长和领悟。
 
 ### 心得体会
 
+1. 背景的影响力超过个人时，人们因为你在这个背景下才会听你。世界上的独行侠还是少的。
+2. 获得影响力和关注的窍门之一是从事会被人广泛关注的新行业，在蓝海里竞争，更加容易成功，也是历史的进程。
+3. 捷径不是那么好走的，通过数个月培训班进入这个行业的同行们，其实面试官都是知道的。真的在缺人的潮流中，才让基础不扎实的同行们有了这个机会。走捷径之后，是需要花费更多的时间在填补空白上的，即使科班的同行们，在工作三五年后，要技术往上走走，还是要拿出计算机网络原理、操作系统等基础书籍再温习的。
 
 ### 工作体验
+
+1. 八股文应该是面试者的捷径，当遇到没有自己技术沉淀的面试官，一套八股文可能就过五关斩六将。很不幸，当前所在的公司，有不少这样的面试官在。如果能把八股文所涉及的知识真的去经历一遍，我愿称他为大佬。
+
+2. 如何获得技术影响力？这件事比较有意思。我见过出版oracle、mysql相关书籍的专家讲座，其言无风华，在公司里名气也不显。我也见过在不大的公司里，但是自身维护一个开源工程，并为较多公司应用的工程师。
+
+   我自己也在csdn上做过实验，入门级的DEMO、框架的搭建相关的文章，阅读量，收藏数会远高于源码分析相关的文章。当然，这个和csdn这个平台的主流用户群体有关。也许，infoQ这样的平台会更适合收获技术影响力。
