--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 15.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 15.md
@@ -4,16 +4,100 @@
 
 ### 原文摘抄
 
+> 作为一个软件工程师，如果只是听从别人的指令开发代码，却不**了解这些代码究竟想要解决什么问题**，那么很多时候你是在制造问题，而不是解决问题，你加班加点辛苦工作**只是在为公司制造麻烦**。而对于你自己而言，日复一日重复执行解决方案，**距离你成为一个技术专家也越来越远**。
+
+> **不要把解决方案当作问题的定义，而忽略了真正要解决的问题是什么**
+>
+> **你不需要去解决别人的问题，你只需要提醒他问题的存在**
+>
+> **鱼是最后一个看到水的，身处问题之中的人往往并不觉得有问题**
+>
+> 太多的问题被人们的适应能力忽略掉了，直到有人解决了这些问题，身处其中的人才恍然，原来过去的方式都是有问题的。
+>
+> 问题 = 期望 - 体验
+>
+> 到一个新环境中，大家体验差不多，但是你的期望和其他人不同，你就会感受到问题。而这种感受则可能是你出人头地的机会：如果你解决了这些问题，其他人也会明白过去的方式是有问题的，而你就是那个解决问题的人。
+
 ### 心得体会
 
+1. 这个专栏无时不刻在每一章都提到了分析、理解问题这个点，这一章给出了一个“问题”的定义。
+2. 很多人并不能很好的理解问题，会导致问题变得更加复杂。
+3. 低效率的会议也是对问题没有统一的认知，盲人摸象对各种表象进行争论。
 
 ### 工作体验
+
+1. 一个从不同环境加入进来的人，往往能带来一些新东西，也是公司鼓励有新血液的原因。
+
+2. “身处问题之中的人往往并不觉得有问题”，这句话又一次让我想到了大学期间数字电路这门课程的一个实验：
+
+   > 实验的内容很简单，用某一个型号的芯片，加上一堆电线，在一个有脉冲、数字显示的机器上，实现一个时钟。
+
+   从写代码的角度来说，很简单，维护小时、分钟这两个变量就可以了，一个对24进行取余，一个对60进行取余，再输出就行。
+
+   说实话，动手前，我和队友老陈都觉得两个课时的时间太充裕了。就是分成一个24进制和一个60进制的显示即可。我们从两个人分工两个模块和共同完成的决策中选择了共同完成，毕竟想着时间也充裕。
+
+   实际上，我们面临的问题是代码编程遇不到的，因为有些芯片是坏的，有些电线也是坏的，相当于我们代码写了`a=1+1`，结果a返回不是2,还是0。我想这个问题，平时写代码时我们肯定不会去考虑，默认了它就必定返回2吧？**计算机到底是怎么保证这个计算结果是可靠的呢**？
+
+   所以我们很多时间在“debug”，通过计算，实验，确定刚接起来的几根电线和芯片到底是哪个出了问题。
+
+   随着时间的过去，仪器上的电线已经乱成一堆大麻花了，对我们的眼力和记忆都开始造成了考验，这时候，是两个人共同来工作的重要性也就体现了，两个人来确认，失误的概率就很低。
+
+   最终，我们在下课后2分钟完成了这个实验，感叹啊，激动啊。
+
+   过了多年，再来反思：
+
+   1. 如果我们事先校验每一个芯片、电线是否正常，是否会降低后续的排查痛苦呢？
+   2. 如果不是双人合作，分成两个模块，在会“冲突”的仪器上，我们会不会乱作一团？
+   3. 如果不是双人合作，面对问题的分析计算、重新接线的过程中会不会出现更多失误？
+   4. 以及，老师是不是应该事先告诉我们，这个实验可能会面临各种各样的仪器上的问题？
+
+   对应我们现在工作中，是不是印证了一些事情的必要性：
+
+   1. 做好单元测试，再进行集成测试是十分有必要的
+   2. 在合适的情况下，进行划分模块，没有过多冲突才是合理的
+   3. 结对编程在应对困难的问题时，两个脑子共同运转是`1+1>2`的。
+   4. 信息很重要，没有事先准备好信息，了解清楚问题，过程就会十分混乱，如陷泥潭。
+
+   
 
 ## 37丨技术沟通之道：如何解决问题？
 
 ### 原文摘抄
 
+> 如果某人能够解决问题，而他自己却感受不到问题，那么就让他感受一下
+>
+> 通常说来，上司的能力要比你的能力强，调动的资源也比你多，有些事情对你而言可能非常困难，但是你上司也许一句话就可以搞定，这个时候，你可以考虑利用你的上司去解决问题。如果他没有感觉到问题，那么想办法让他感觉到问题。
+>
+> 所以有句话叫做：用人的最高境界是用上司。
+>
+> 直言有讳:要批评而不要责难，要对事而不要对人。
+>
+> **以赞成的方式表示反对**
+>
+> 适当的逃避问题
+
+> 如果你想解决一个大家都不关注的问题，那么试试让问题变得更糟
+>
+> 如果你不填老师想要的答案，你就是个傻瓜
+>
+> 我们每天在解决各种问题，帮产品经理解决问题，帮用户解决问题，**其实我们最终都是在帮自己的上司解决问题**，你如果不解决这些问题，你的上司可能就会遇到问题。
+>
+> 因此，如果你觉得一个问题很重要，而你的上司却不觉得，那么你辛苦去解决这个问题可能就是在白费功夫。**你无法在一个管理体系中获得认可，你的工作无法获得正反馈，你的努力是无法持续的**。所以，如果这个问题真的很重要，而你无法让你的上司认可其重要性，那么对于你而言，**真正严重的问题不是问题本身，而是你的上司本身**。
+>
+> 既然员工是以上司的意志作为自己工作的依据，那么就可以得出一个推论：**管理者对待问题的视角和态度，决定了下属会成为什么样的人**。
+
 ### 心得体会
 
+1. 两点之间直线距离最短。这个道理狗都知道，所以狗下河了，人走了桥。直球虽然好，但是守门员这个障碍过不去。人们往往把问题复杂化，是因为问题本身背后还有问题。
 
 ### 工作体验
+
+1. 上司真的很重要，经历过不同的上司：
+
+   1. 只会pua下属，讨好上级，拉皮条能力9级的；
+   2. 有能力，有眼光，实干的；
+   3. 有能力，有影响力的，不知所在的；
+   4. 有能力，刻苦的，完美主义的偏执人格；
+   5. 知识广泛，与人为善，沟通能力10级，稍微有些老好人的；
+
+   每个上司的团队风格的确是完全不同，不谈好坏，只谈适应，每个人都有自己的风格，遇到更搭配的才是王道。
