--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 16.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 16.md
@@ -4,16 +4,69 @@
 
 ### 原文摘抄
 
+> 做技术开发同学的职业规划通常有两个方向：一个是持续做技术，成为技术专家、架构师；一个是转管理，带领技术团队做开发。
+>
+> 最近几年，就我所见，开发人员的技术水平是在快速提升的，从我们这个专栏得到的反馈也确实如此。但是，技术管理者的管理水平却似乎并没有太多的进步，我想，这也许就是你的机会。
+
+> 在一个层级组织中，每个员工都会趋向于晋升到他所不能胜任的职位。
+>
+> 一个成熟的组织中，所有的职位都被不能够胜任它的人承担着.
+
+> 彼得进一步对这些不能胜任自己职位的人进行观察，发现当一个人位于他不能胜任的职位上时，他必须投入全部的精力才能有效完成工作，这个职位也被称作这个人的**彼得高地**。一个处于彼得高地的人，精疲力尽于他手头的工作，就无法再进行更进一步的思考和学习，他的**个人能力提升和职业进步都将止步于此**。
+>
+> 对公司而言，真正有价值的是你为公司解决了多少问题，而不是完成了多少工作，**工作本身没有意义，解决问题才有意义。**
+>
+> 对于你自己而言，真正有价值的不是你获得了多快的晋升，多高的加薪，而是你获得了多少**持续高强度训练**的机会。
+
+> 技术管理领域，常见的管理方式有两种，一种是问题驱动型管理，一种是流程驱动型管理。这两种都不是高效的管理方法。更高效的管理方式是目标型管理。目标驱动的管理者并不特别关注问题，**他更关注解决方案。**
+>
+> 仅仅技术做得好并不能保证可以好管理，想转管理的同学应该专门学习一下管理学的基础知识，而不是仅仅看了两篇管理文章，觉得自己技术不错还擅长沟通就转管理了。
+
 ### 心得体会
 
+1. 公司的发展速度过快，每个人也必须跟得上那样的发展速度，而管理这件事情应该是有些孤独的。一个人是有上限的，跟不上发展必然走到彼得高地。反言之，一个公司发展缓慢，一个人不走到自己的彼得高地，似乎可能路径也没有。
+2. 公司的发展和个人的提升，大方向是一致的，但是必然在某些问题上是冲突的。例如，我们更希望用业余时间去参加峰会，与大拿交流。或者自己去学习，沉淀。但是公司业务量上升，没有足够的够能力的同事涌现出来，势必上级会让你承担这份工作，占用你的业余时间。如何做权衡，还是要根据场景而言，因人而异，由你自己判断，是不是值得。
 
 ### 工作体验
+
+1. 在科技型的公司，的确很多领导都是由技术或者产品这些基层岗位慢慢往上走上去的。从事技术太久，有些人有时候真的眼界会被限制住。有多少人还会在业务时间看名著去增加文化，去看历史增加沉淀？我看到的领导往往较多是为了KPI而努力，而KPI更多定义的是可见的输出，团队的管理上，竟然会写上组织多少次团建。当然，我并不是觉得这个领导必然差，他作为领导一定有过人之处，但是也是受到了由上而下的这么一个制度的"胁迫"只能如此制定。可能从大环境来看，这样的管理是性价比最高的吧。
 
 ## 答疑丨工作中的交往和沟通，都有哪些小技巧呢？
 
 ### 原文摘抄
 
+> 保持交际和赞美： 赞美是对对方做得好的事情，明确表达你的称赞。
+>
+> 平衡力量和温暖。职场中什么样的领导最受欢迎，答案是，同时拥有力量和温暖的人。
+>
+> 学会聆听和提问
+
+> 彼得·德鲁克曾经说过，最好的管理学书籍是小说。因为管理就是将每个人的主观能动性发挥出来，为组织创造价值，但是人性是复杂的，任何刻板的管理教条都会遇到人性的阻力，进而演化成组织前进的阻碍。而洞悉人性，善于利用人性的特点，把相关各方的利益统一起来，事情会自然前进。
+
+> **架构师用心旁观这个世界，**
+>
+> **而他坚信他内心的映像。**
+>
+> **他的心像天空一样开阔，**
+>
+> **任世相万物来来往往。**
+
 ### 心得体会
 
+1. 沟通是一种技巧。需要诚心做基础，柔和做桥梁。
+2. 架构师在其中，在其外，里外映照。
 
 ### 工作体验
+
+1. 不管在工作还是生活，良好的沟通方式都是需要的，需要一辈子学习，一辈子收益。
+
+## 结束语丨期待未来的你，成为优秀的软件架构师
+
+### 原文摘抄
+
+> 一个优秀的软件架构师应该能够写漂亮的技术 PPT，也能写漂亮的代码，让自己开发的核心代码支撑起系统的核心架构，又让自己的架构方案得到大多数人的拥护。
+>
+> 一个优秀的软件架构师应该拥有某种技术影响力和领导力，无需职位上的权力就可以让其他工程师听信于他。
+
+
+### 
