--- a/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 12.md
+++ b/《后端技术面试 38 讲》学习笔记/《后端技术面试 38 讲》学习笔记 Day 12.md
@@ -14,7 +14,7 @@
 
 ### 心得体会
 
-1. 大数据像分布式，像在哪里？分布式把流量分散给每个节点处理；大数据把数据拆分，在每个spark节点上跑，最后再汇总在一起。像就像在拆分，而不同的就是大数据还会做一次汇总合并。
+1. 大数据像分布式，分布式把流量分散给每个节点处理；大数据把数据拆分，在每个spark节点上跑，最后再汇总在一起。像就像在拆分，而不同的就是大数据还会做一次汇总合并。
 
 ### 工作体验
 
