--- a/AJ-Report工程学习/02主要流程以及其接口.md
+++ b/AJ-Report工程学习/02主要流程以及其接口.md
@@ -4,23 +4,27 @@
 
 ## 配置数据源
 
+### 测试数据源
+/dataSource/testConnection
+
 ### 新增数据源
-
-
+/dataSource
 
 ### 查询数据源
-
+/dataSource/pageList
 
 
 ## 配置数据集
 
 ### 新增数据集
-
+/dataSet
 
 
 ### 查询数据集
+/dataSet/pageList
 
-
+### 查询数据集底表数据
+/dataSet/testTransform
 
 ## 配置大屏
 
